# crew_ai_hello_world_agents

./: .env.example  README.md  pyproject.toml  report.md
src/latest_ai_research/: crew.py  main.py
