[project]
name = "latest_ai_research"
version = "0.1.0"
description = "latest-ai-research using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2"
]

[project.scripts]
latest_ai_research = "latest_ai_research.main:run"
run_crew = "latest_ai_research.main:run"
train = "latest_ai_research.main:train"
replay = "latest_ai_research.main:replay"
test = "latest_ai_research.main:test"
run_with_trigger = "latest_ai_research.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
